# rustlink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose.test.yml  install.ps1  install.sh
.github/scripts/: create-choco.ps1
.github/workflows/: ci.yml  pages.yml
docs/: index.html
evidence/e2e/: E2E_TEST_REPORT.md  peer_ids.txt  test01_init_alice.txt  test02_init_bob.txt  test03_init_charlie.txt  test04_alice_status.txt  test05_add_friend.txt  test06_add_friend2.txt  test07_friends_alice.txt  test09_send_file.txt  test10_chat.txt  test11_persistence.txt  test12_version.txt
src/: cli.rs  filetransfer.rs  handlers.rs  identity.rs  lib.rs  main.rs  messaging.rs  network.rs  protocol.rs  storage.rs  tui.rs
tests/: e2e_test.sh  e2e_tests.rs  filetransfer_test.rs  identity_test.rs  lib_tests.rs  messaging_test.rs  network_test.rs  storage_test.rs  tui_test.rs
