[package]
name = "rustlink"
version = "0.1.0"
edition = "2021"
authors = ["RustLink Team"]
description = "P2P CLI Social App - Decentralized communication without servers"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dialoguer = "0.11"

# Async & Networking
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.56", features = [
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "relay",
    "dns",
    "quic"
] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

[features]
default = []
